# grimdawn-devotions

./: .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  ONBOARDING.md  README.md  devotions.json  itemdb.html  justfile
.github/workflows/: ci.yml  deploy.yml
assets/devotions/: manifest.json
data/: devotions.json  resistance-reduction.json  stat-format-tags.json  stat-tags.json  stat_labels.json  steam-build-versions.json
data/i18n/: game.cs.json  game.de.json  game.en.json  game.es.json  game.fr.json  game.it.json  game.ja.json  game.ko.json  game.pl.json  game.pt.json  game.ru.json  game.vi.json  game.zh.json
data/item-curation/: attack-speed.json  factions.json  gear-types.json  stat-families.json  variance.json
docs/: assets-and-textures.md  dbr-format.md  deposit.md  devotion-system.md  display-model.md  i18n.md  item-schema.md  reachability-engine.md  reachability-performance.md
docs/ideation/: 2026-07-03-item-data-extraction-ideation.html  2026-07-11-item-db-direction-ideation.html
docs/plans/: 2026-07-03-001-feat-item-data-raw-deposit-plan.md  2026-07-03-002-feat-typed-item-schema-plan.md  (+2 more)
scripts/: build_assets.py  build_deposit.py  build_derived.py  build_game_tables.py  compare_rr_prototype.py  dataset_release.py  diff_data.py  gd_dbr.py  parse_devotions.py  parse_rr.py  test_build_game_tables.py  test_diff_data.py  test_gd_dbr.py  test_parse_devotions.py  test_parse_rr.py  tex2png.py
web/: biome.json  index.html  package.json  resistance-reduction.html  tsconfig.json
web/e2e/: smoke.ts  (+1 more)
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
(+250 files in other folders)
